--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
-# v1.3.0 October 26, 2013
+# v1.3.2 October 26, 2013
 # https://github.com/bevry/base
 language: node_js
-install: "./node_modules/.bin/cake compile"
+install: "npm install"
+before_script: "./node_modules/.bin/cake compile"
 script: "npm test"
 node_js:
   - "0.8"
