--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "title": "Base",
   "name": "base",
@@ -11,9 +10,12 @@
   "badges": {
     "travis": true,
     "npm": true,
+    "david": true,
+    "daviddev": true,
     "gittip": "bevry",
     "flattr": "344188/balupton-on-Flattr",
-    "paypal": "QB8GQPZAH84N6"
+    "paypal": "QB8GQPZAH84N6",
+    "bitcoin": "https://coinbase.com/checkouts/9ef59f5479eec1d97d63382c9ebcb93a"
   },
   "keywords": [
     "a",
