--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ script: "npm test"
 node_js:
   - "0.8"
   - "0.10"
+cache:
+  directories:
+    - node_modules
 notifications:
   irc:
     - "irc.freenode.org#bevry-dev"
