Added ES6 support and linting

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,19 @@ cache:
   directories:
     - node_modules
 notifications:
+  # Notify #bevry-dev
   irc:
     - "irc.freenode.org#bevry-dev"
+
+  # Nofity travisci@bevry.me
   email:
     recipients:
       - travisci@bevry.me
+
+  # Notify https://gitter.im/bevry
+  webhooks:
+    urls:
+      - "https://webhooks.gitter.im/e/d2884017c0c4b0319adc"
+    on_success: always  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: false     # default: false
