--- a/package.json
+++ b/package.json
@@ -38,30 +38,34 @@
     "type": "git",
     "url": "http://github.com/bevry/projectName.git"
   },
+  "browsers": true,
   "engines": {
     "node": ">=0.8"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
+    "assert-helpers": "^1.0.2",
+    "babel": "^4.7.16",
+    "babel-eslint": "^2.0.2",
+    "babelify": "^5.0.4",
+    "browserify": "^9.0.3",
     "coffee-script": "^1.9.1",
+    "eslint": "^0.17.1",
     "joe": "^1.6.0",
     "joe-reporter-console": "^1.2.1",
-    "chai": "^2.1.1",
-    "projectz": "^0.5.0",
-    "biscotto": "^2.1.2"
+    "projectz": "^0.5.0"
   },
-  "directories": {
-    "lib": "./out/lib"
-  },
+  "main": "./es6guardian.js",
   "scripts": {
     "preinstall": "node ./cyclic.js",
-    "test": "node ./out/test/projectName-test.js",
-    "start": "./node_modules/.bin/cake watch"
+    "test": "node --harmony ./coffeejs/test/projectName-test.js",
+    "browserify": "./node_modules/.bin/browserify ./web/index.js -t babelify --outfile ./web/out.js"
   },
-  "main": "./out/lib/projectName.js",
   "cakeConfiguration": {
-    "COFFEE_SRC_PATH": "src",
-    "BISCOTTO_SRC_PATH": "src"
+    "BISCOTTO_SRC_PATH": "src",
+    "COFFEE_SRC_PATH": "coffee",
+    "COFFEE_OUT_PATH": "coffeejs",
+    "BABEL_SRC_PATH": "es6",
+    "ESLINT_SRC_PATH": "es6"
   }
 }
