--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,4 @@
-// 27 March 2015
+// 31 March 2015
 // https://github.com/bevry/base
 {
     "parser": "babel-eslint",
@@ -481,11 +481,11 @@
         // function () {, get blah () {
         "space-before-function-parentheses": [2, "always"],
 
-        // @TODO revise this
-        "space-in-brackets": [2, "never"],
+        // This is for spacing between [], so [ 1, 2, 3 ] which we don't want
+        "space-in-brackets": 0,
 
-        // Sometimes we like this sometimes, and sometimes we don't
-        // @TODO revise this
+        // This is for spacing between (), so doSomething( 1, 2, 3 ) or if ( 1 === 3 )
+        // which we want for ifs, but don't want for calls
         "space-in-parens": 0,
 
         // We use this
