--- a/package.json
+++ b/package.json
@@ -61,17 +61,16 @@
     "setup": "./node_modules/.bin/cake setup",
     "compile": "./node_modules/.bin/cake compile",
     "watch": "./node_modules/.bin/cake watch",
-    "test": "./node_modules/.bin/cake test",
-    "prepublish": "./node_modules/.bin/cake prepublish",
-    "postpublish": "./node_modules/.bin/cake postpublish",
+    "verify": "./node_modules/.bin/cake verify",
+    "prepare": "./node_modules/.bin/cake prepare",
+    "release": "./node_modules/.bin/cake release",
+
+    "test": "node --harmony ./es5/test/projectName-test.js",
     "browserify": "./node_modules/.bin/browserify ./web/index.js -t babelify --outfile ./web/out.js"
   },
   "cakeConfiguration": {
-    "TEST_COMMAND": "node --harmony ./coffeejs/test/projectName-test.js",
-    "BISCOTTO_SRC_PATH": "src",
-    "COFFEE_SRC_PATH": "coffee",
-    "COFFEE_OUT_PATH": "coffeejs",
     "BABEL_SRC_PATH": "es6",
-    "ESLINT_SRC_PATH": "es6"
+    "ESLINT_SRC_PATH": "es6",
+    "YUIDOC_SRC_PATH": "es6"
   }
 }
