enable all ecma features in eslint

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,32 @@
-// 15 August 2015
+// 17 August 2015
 // https://github.com/bevry/base
 {
     "parser": "babel-eslint",
     "ecmaFeatures": {
-        "modules": true
+        "arrowFunctions": true,
+        "binaryLiterals": true,
+        "blockBindings": true,
+        "classes": true,
+        "defaultParams": true,
+        "destructuring": true,
+        "forOf": true,
+        "generators": true,
+        "modules": true,
+        "objectLiteralComputedProperties": true,
+        "objectLiteralDuplicateProperties": true,
+        "objectLiteralShorthandMethods": true,
+        "objectLiteralShorthandProperties": true,
+        "octalLiterals": true,
+        "regexUFlag": true,
+        "regexYFlag": true,
+        "restParams": true,
+        "spread": true,
+        "superInFunctions": true,
+        "templateStrings": true,
+        "unicodeCodePointEscapes": true,
+        "globalReturn": true,
+    	"jsx": true,
+        "experimentalObjectRestSpread": true
     },
     "env": {
         "browser": true,
