--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,6 @@ script: "npm test"
 # Custom notifications
 # notifications:
 #   # Notify email travisci@bevry.me
-
 #   email:
 #     recipients:
 #       - travisci@bevry.me
@@ -33,13 +32,11 @@ script: "npm test"
 #   # Notify slack bevry#updates on https://bevry.slack.com
 #   # Bevry's token available from https://bevry.slack.com/services/4200459714
 #   # travis encrypt "$SLACK_SUBDOMAIN:$SLACK_TRAVIS_TOKEN#updates" --add notifications.slack
-
 #   slack:
 #     secure: TXhffbJwQRIT+9sxFvi/aW8mvE0+IpDyjW5V0nfhjEuyhqsocBQi15rxxfubha9rSs/f1aCoWnH6H5YcrffT8dtVJTe6inKNO0B/JNJa4bIb20+QfoFo2AzMdtxEZPKhy+dEtPW7n9AJrItLVnz5SpqkBkjV0P+rJMTih7ZYtF4=
 
-# Custom deployment
-# travis encrypt "$GITHUB_USER:$GITHUB_TRAVIS_TOKEN#updates" --add env.global
-#
+# # Custom deployment
+# # travis encrypt "$GITHUB_USER:$GITHUB_TRAVIS_TOKEN" --add env.global
 # env:
 #   global:
 #     secure: "BAWV2Gc+9wgcqygqaSMN1KXfqxi/DRupGd/9flHuIWgikCWQAdMAHmAWZKVh6/bYwGeW7ZVA+hZeBoQBMd6RSPsAi3LTOE/KzUU8edYoibtlF5EMHgOc1rqe5sGzlMdIc2htx5dHOgXP5tr+PcIsCoTeOiKgbCGHxuKcqaQgFMQ="
