--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,4 @@
-// 25 August 2015
+// 4 September 2015
 // https://github.com/bevry/base
 {
 	"parser": "babel-eslint",
@@ -409,12 +409,8 @@
 		// We like anonymous functions
 		"func-names": 0,
 
-		// Define functions with var statements
-		// @TODO babel will name the functions for us, however quite redundantly:
-		// var myfunc = function myfunc (){}
-		// We can't yet change this to declaration mode, as declaration mode doesn't support ES6 => syntax which
-		// is only for anonymous functions that must be assigned via expressions instead of declarations
-		"func-style": [2, "expression"],
+		// Prefer to define functions via variables
+		"func-style": [1, "declaration"],
 
 		// Space after the colon
 		"key-spacing": [2, {
