Use paypalURL for badge instead of paypalButtonID to prevent README format issue with underscore affecting syntax highlighting in atom

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
       "patreonUsername": "bevry",
       "gratipayUsername": "bevry",
       "flattrCode": "344188/balupton-on-Flattr",
-      "paypalButtonID": "QB8GQPZAH84N6",
+      "paypalURL": "https://bevry.me/paypal",
       "bitcoinURL": "https://bevry.me/bitcoin",
       "wishlistURL": "https://bevry.me/wishlist",
       "slackinURL": "https://slack.bevry.me"
