--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "config": {
       "patreonUsername": "bevry",
       "gratipayUsername": "bevry",
-      "flattrCode": "344188/balupton-on-Flattr",
+      "flattrURL": "https://bevry.me/flattr",
       "paypalURL": "https://bevry.me/paypal",
       "bitcoinURL": "https://bevry.me/bitcoin",
       "wishlistURL": "https://bevry.me/wishlist",
