flattrURL to flatterUsername as it is a username system

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "config": {
       "patreonUsername": "bevry",
       "gratipayUsername": "bevry",
-      "flattrURL": "https://bevry.me/flattr",
+      "flattrUsername": "balupton",
       "paypalURL": "https://bevry.me/paypal",
       "bitcoinURL": "https://bevry.me/bitcoin",
       "wishlistURL": "https://bevry.me/wishlist",
