--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# 2015 March 27
+# 2016 March 8
 # https://github.com/bevry/base
 
 # Temp Files
@@ -15,7 +15,10 @@ bower_components/
 node_modules/
 out/
 coffeejs/
+coffee/
 es5/
+es2015/
+esnext/
 
 # Editor Caches
 .c9/
