--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
       "slackinURL": "https://slack.bevry.me"
     }
   },
-  "author": "2015+ Bevry Pty Ltd <us@bevry.me> (http://bevry.me)",
+  "author": "2016+ Bevry Pty Ltd <us@bevry.me> (http://bevry.me)",
   "maintainers": [
     "Benjamin Lupton <b@lupton.cc> (https://github.com/balupton)"
   ],
@@ -50,33 +50,39 @@
     "type": "git",
     "url": "http://github.com/bevry/projectName.git"
   },
-  "browsers": true,
   "engines": {
     "node": ">=0.12"
   },
-  "main": "./esnextguardian.js",
-  "browser": "./es5/lib/index.js",
-  "jspm": {
-      "main": "./es5/lib/index.js"
+  "main": "index.js",
+  "browser": "es2015/index.js",
+  "scripts": {
+    "setup": "npm install",
+    "clean": "rm -Rf ./docs ./es2015",
+    "compile": "npm run compile:es2015",
+    "compile:es2015": "babel ./source --out-dir ./es2015 --presets es2015",
+    "meta": "npm run meta:docs && npm run meta:projectz",
+    "meta:docs": "documentation build -f html -g source/**.js -o docs",
+    "meta:projectz": "projectz compile",
+    "prepare": "npm run compile && npm run test && npm run meta",
+    "release": "npm run prepare && npm run release:tag && npm run release:push",
+    "release:tag": "git tag v$npm_package_version -a",
+    "release:push": "git push origin master && git push origin --tags",
+    "pretest": "npm run test:eslint && npm run test:flow",
+    "test:eslint": "eslint ./source",
+    "test:flow": "flow check",
+    "test": "node --harmony ./es2015/test.js"
   },
   "dependencies": {},
-  "devDependencies": {},
-  "scripts": {
-    "clean": "node --harmony nakefile.js clean",
-    "setup": "node --harmony nakefile.js setup",
-    "compile": "node --harmony nakefile.js compile",
-    "watch": "node --harmony nakefile.js watch",
-    "verify": "node --harmony nakefile.js verify",
-    "meta": "node --harmony nakefile.js meta",
-    "prepare": "node --harmony nakefile.js prepare",
-    "release": "node --harmony nakefile.js release",
-
-    "test": "node --harmony ./es5/test/index.js",
-    "browserify": "./node_modules/.bin/browserify ./web/index.js -t babelify --outfile ./web/out.js"
-  },
-  "nakeConfiguration": {
-    "BABEL_SRC_PATH": "esnext",
-    "ESLINT_SRC_PATH": "esnext",
-    "YUIDOC_SRC_PATH": "esnext"
+  "devDependencies": {
+    "assert-helpers": "^4.1.0",
+    "babel-cli": "^6.6.5",
+    "babel-preset-es2015": "^6.6.0",
+    "documentation": "^4.0.0-beta",
+    "eslint": "^2.3.0",
+    "eslint-plugin-babel": "^3.1.0",
+    "flow-bin": "^0.22.1",
+    "joe": "^1.6.0",
+    "joe-reporter-console": "^1.2.1",
+    "projectz": "^1.0.9"
   }
 }
