Revert .gitignore, was meant to edit .npmignore
Goes back to bd8a687d6bbe5c129ffc0fab3e4b00d6fc84e6ba

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# 2016 June 4
+# 2016 March 21
 # https://github.com/bevry/base
 
 # Temp Files
@@ -13,36 +13,24 @@ build/
 components/
 bower_components/
 node_modules/
+out/
+*output/
+coffeejs/
+coffee/
+es5/
+es2015/
+esnext/
+
+# Editor Caches
+.c9/
 
 # Private Files
 .env
+.idea
+.cake_task_cache
 
-# Documentation Files
-docs/
-guides/
-BACKERS.md
-CONTRIBUTING.md
-HISTORY.md
-
-# Development Files
-web/
-**/test*
-.editorconfig
-.eslintrc*
-.jshintrc
-.jscrc
-coffeelint*
-.travis*
-nakefile*
-Cakefile
-Makefile
-
-# Other Package Definitions
-template.js
-component.json
-bower.json
 
 # =====================================
-# CUSTOM MODIFICATIONS
+# CUSTOM
 
 # None
