remove our:release:check until https://github.com/documentationjs/documentation/issues/577 is done

--- a/package.json
+++ b/package.json
@@ -90,9 +90,8 @@
     "our:verify:eslint": "eslint --fix ./source",
     "our:verify:flow": "flow check",
     "our:test": "npm run our:verify && npm test",
-    "our:release": "npm run our:release:prepare && npm run our:release:check && npm run our:release:publish && npm run our:release:tag && npm run our:release:push",
+    "our:release": "npm run our:release:prepare && npm run our:release:publish && npm run our:release:tag && npm run our:release:push",
     "our:release:prepare": "npm run our:clean && npm run our:compile && npm run our:test && npm run our:meta",
-    "our:release:check": "if git status --porcelain | grep .; then exit 1; fi",
     "our:release:publish": "npm publish",
     "our:release:tag": "git tag v$npm_package_version -a",
     "our:release:push": "git push origin master && git push origin --tags",
