--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-# 2016 October 27
+# 2016 November 4
 # https://github.com/bevry/base
 
 # Use the latest travis infrastructure
@@ -17,27 +17,38 @@ cache:
   directories:
     - node_modules
 
-# Ensure dependencies are installed using an LTS node version
-install: >
-  if nvm ls-remote --lts | grep "$(nvm current)"; then
-    npm install
+# Ensure npm is up to date and that dependencies are installed using an LTS node version
+install: |
+  export CURRENT_NPM_VERSION="$(npm --version)"
+  export LATEST_NPM_VERSION="$(npm view npm version)"
+  if test "$CURRENT_NPM_VERSION" != "$LATEST_NPM_VERSION"; then
+    echo "running an old npm version, upgrading"
+    npm instal npm --global --cache-min=Infinity
+  fi
+
+  export CURRENT_NODE_VERSION="$(node --version)"
+  export LTS_NODE_VERSIONS="$(nvm ls-remote --lts)"
+  if echo "$LTS_NODE_VERSIONS" | grep "$CURRENT_NODE_VERSION"; then
+    echo "running on a LTS node version, completing setup"
+    npm run our:setup
   else
+    echo "running on a non-LTS node version, completing setup on a LTS node version"
     nvm install --lts
-    export LTS_NODE_VERSION="$(nvm current)"
-    npm install
+    export LTS_NODE_VERSION="$(node --version)"
+    npm run our:setup
     nvm use "$TRAVIS_NODE_VERSION"
   fi
 
 # Ensure compilation and linting occur on an LTS node version
-before_script: >
-  if nvm ls-remote --lts | grep "$(nvm current)"; then
-    echo "running on a LTS node version, compiling and linting"
-    npm run our:compile && npm run our:verify
-  else
-    echo "running on a non-LTS node version, compiling with lts, skipping linting"
+before_script: |
+  if test "$LTS_NODE_VERSION"; then
+    echo "running on a non-LTS node version, compiling with LTS, skipping linting"
     nvm use "$LTS_NODE_VERSION"
     npm run our:compile
     nvm use "$TRAVIS_NODE_VERSION"
+  else
+    echo "running on a LTS node version, compiling and linting"
+    npm run our:compile && npm run our:verify
   fi
 
 # Custom notifications
