--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
       "---",
       "slackin",
       "patreon",
+      "opencollective",
       "gratipay",
       "flattr",
       "paypal",
@@ -28,6 +29,7 @@
     ],
     "config": {
       "patreonUsername": "bevry",
+      "opencollectiveUsername": "bevry",
       "gratipayUsername": "bevry",
       "flattrUsername": "balupton",
       "paypalURL": "https://bevry.me/paypal",
